# freelancer_work

./: .gitignore  README.MD  pyproject.toml
app/: main.py
app/api/: common.py
app/core/: base.py  config.py  db.py
app/crud/: common.py
app/db_models/: common.py
app/schemas/: common.py
migrations/: env.py
migrations/versions/: 2025_08_08_1324-4d8a645bf889_created_common_models.py
